--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="language" content="pt-BR" />
-    <title>Dra. Maria Nutrição - Nutricionista Especializada</title>
+    <title>Dra. Natália Cruz - Nutricionista Especializada</title>
     <meta name="description" content="Nutricionista especializada em nutrição clínica e esportiva. Consultas presenciais e online. Transforme sua saúde com orientação profissional personalizada.">
-    <meta name="keywords" content="nutricionista, nutrição, dieta, saúde, emagrecimento, reeducação alimentar, São Paulo">
-    <meta name="author" content="Dra. Maria Nutrição">
+    <meta name="keywords" content="nutricionista, nutrição, dieta, saúde, emagrecimento, reeducação alimentar, esportivo, Lavras">
+    <meta name="author" content="Dra. Natália Cruz">
   </head>
   <body>
     <div id="root"></div>
